# agentlog

./: .gitignore  .golangci.yml  CLAUDE.md  CONTRIBUTING.md  Makefile  PROJECT.md  README.md  agentlog.toml  brief.md  go.mod
.claude/: settings.json
.claude/agent-team-setup-specs/: TEAM.md
.claude/hooks/: decision-write.sh  session-start.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-npm.yml  publish-pypi.yml  release.yml  update-homebrew.yml
cmd/agentlog/: main.go  main_test.go
cmd/agentlogd/: main.go  main_test.go
docs/: claude-code.md  dogfooding-report.md  show-hn-draft.md
docs-site/: mkdocs.yml
docs-site/docs/: architecture.md  claude-code.md  cli-reference.md  getting-started.md  hook-validation.md  index.md  python-sdk.md  typescript-sdk.md
docs-site/overrides/: home.html
examples/: claude-code-snippet.md
examples/hooks/: agentlog-hook.sh
integrations/claude-code/: README.md  VALIDATION.md  decision-write.sh  decision-write_test.sh  install.sh  install_test.sh  session-start.sh  session-start_test.sh
internal/cli/: blame.go  blame_test.go  client.go  context.go  context_test.go  export.go  export_test.go  format.go  log.go  log_test.go  pidfile.go  pidfile_test.go  query.go  query_test.go  show.go  show_test.go  start.go  stop.go  timeparse.go  write.go  write_test.go
landing/: index.html  style.css
sdk/python/: README.md  pyproject.toml
sdk/python/src/agentlog/: __init__.py  client.py  errors.py
sdk/python/tests/: test_client.py  test_integration.py
(+33 files in other folders)
