[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlog"
version = "0.1.0"
description = "Python SDK for agentlog - a local-first decision log daemon for agentic workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "agentlog contributors" },
]
keywords = ["agent", "logging", "decision-log", "llm", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/byronxlg/agentlog"
Repository = "https://github.com/byronxlg/agentlog"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
